--- a/{{ cookiecutter.project_slug }}/frontend/templates/pages/privacy-policy.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/pages/privacy-policy.html
@@ -128,7 +128,7 @@
       If you have any questions about this privacy policy, please contact us at:
     </p>
     <p>
-      Email: {{ cookiecutter.email }}<br>
+      Email: {{ cookiecutter.author_email }}<br>
       Address: LVTD, LLC<br>
       Website: <a href="{% raw %}{% url 'landing' %}{% endraw %}">{% raw %}{{ request.get_host }}{% endraw %}</a>
     </p>
@@ -145,7 +145,7 @@
     </ul>
     <p>
       We do not sell your personal information. To exercise these rights, contact us at
-      {{ cookiecutter.email }} with "CCPA Request" in the subject line.
+      {{ cookiecutter.author_email }} with "CCPA Request" in the subject line.
     </p>
 
     <h2>10. International Data Transfers</h2>
