--- a/{{ cookiecutter.project_slug }}/frontend/templates/pages/terms-of-service.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/pages/terms-of-service.html
@@ -146,7 +146,7 @@
       If you have any questions about these Terms of Service, please contact us at:
     </p>
     <p>
-      Email: {{ cookiecutter.email }}<br>
+      Email: {{ cookiecutter.author_email }}<br>
       Address: LVTD, LLC<br>
       Website: <a href="{% raw %}{% url 'landing' %}{% endraw %}">{% raw %}{{ request.get_host }}{% endraw %}</a>
     </p>
