add base settings and models + rules for pydantiai

--- a/{{ cookiecutter.project_slug }}/frontend/templates/base_app.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/base_app.html
@@ -151,7 +151,7 @@
                   </li>
                   {{ "{% if user.is_superuser %}" }}
                   <li class="py-5 text-center border-b border-gray-200">
-                    <a href="{% raw %}{% url 'admin:index' %}{%- endraw %}" class="text-sm font-semibold text-{{ cookiecutter.project_main_color }}-600 hover:text-{{ cookiecutter.project_main_color }}-700">
+                    <a href="{% raw %}{% url 'admin_panel' %}{%- endraw %}" class="text-sm font-semibold text-{{ cookiecutter.project_main_color }}-600 hover:text-{{ cookiecutter.project_main_color }}-700">
                       Admin Panel
                     </a>
                   </li>
