--- a/{{ cookiecutter.project_slug }}/frontend/templates/docs/base_docs.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/docs/base_docs.html
@@ -1,7 +1,7 @@
 {{ "{% extends 'base_landing.html' %}" }}
 
 {{ "{% block content %}" }}
-<div class="px-4 mx-auto max-w-[1400px] sm:px-6 lg:px-8" data-controller="toc">
+<div class="px-4 mx-auto max-w-[1400px] mt-16 sm:mt-24 lg:px-8" data-controller="toc">
   <div class="flex flex-col gap-8 xl:flex-row xl:gap-12">
     <!-- Left Sidebar Navigation -->
     <aside class="flex-shrink-0 xl:w-72">
