--- a/{{ cookiecutter.project_slug }}/frontend/templates/account/password_reset.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/account/password_reset.html
@@ -5,10 +5,10 @@
     <div class="flex justify-center items-center px-4 py-12 my-4 sm:px-6 lg:px-8">
         <div class="space-y-8 w-full max-w-md">
             <div>
-                <h2 class="mt-6 text-3xl font-extrabold text-center text-gray-900">
+                <h2 class="mt-6 text-3xl font-extrabold text-center text-gray-900 dark:text-gray-100">
                     Reset your password
                 </h2>
-                <p class="mt-2 text-sm text-center text-gray-600">
+                <p class="mt-2 text-sm text-center text-gray-600 dark:text-gray-300">
                     Enter your email address and we'll send you a link to reset your password.
                 </p>
             </div>
@@ -20,7 +20,7 @@
                     <div>
                         {{ "{{ form.email.errors | safe }}" }}
                         <label for="email" class="sr-only">Email address</label>
-                        {{ '{% render_field form.email placeholder="Email address" id="email" name="email" type="email" autocomplete="email" required=True class="block relative px-3 py-2 w-full placeholder-gray-500 text-gray-900 rounded-md border border-gray-300 appearance-none focus:outline-none focus:ring-{{cookiecutter.project_main_color}}-500 focus:border-{{cookiecutter.project_main_color}}-500 focus:z-10 sm:text-sm" %}' }}
+                        {{ '{% render_field form.email placeholder="Email address" id="email" name="email" type="email" autocomplete="email" required=True class="block relative px-3 py-2 w-full placeholder-gray-500 text-gray-900 bg-white dark:bg-gray-900 dark:text-gray-100 dark:placeholder-gray-400 rounded-md border border-gray-300 dark:border-gray-700 appearance-none focus:outline-none focus:ring-{{cookiecutter.project_main_color}}-500 focus:border-{{cookiecutter.project_main_color}}-500 focus:z-10 sm:text-sm" %}' }}
                     </div>
                 </div>
 
