fix: use author_name instead of hard-coded Rasul

--- a/{{ cookiecutter.project_slug }}/frontend/templates/base_landing.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/base_landing.html
@@ -219,8 +219,7 @@
       "url": "https://{{ '{{ request.get_host }}' }}/",
       "author": {
         "@type": "Person",
-        "givenName": "Rasul",
-        "familyName": "Kireev",
+        "name": "{{ cookiecutter.author_name }}",
         "url": "https://rasulkireev.com/"
       }
     }
