--- a/{{ cookiecutter.project_slug }}/frontend/templates/blog/blog_post.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/blog/blog_post.html
@@ -49,7 +49,7 @@
     "dateModified": "{% raw %}{{ blog_post.updated_at|date:'c' }}{% endraw %}",
     "author": {
       "@type": "Person",
-      "name": "Rasul Kireev",
+      "name": "{{ cookiecutter.author_name }}",
       "url": "https://rasulkireev.com/"
     },
     "publisher": {
