--- a/{{ cookiecutter.project_slug }}/frontend/templates/pages/pricing.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/pages/pricing.html
@@ -157,8 +157,7 @@
     "url": "{% raw %}https://{{ request.get_host }}{% url 'pricing' %}{%- endraw %}",
     "author": {
       "@type": "Person",
-      "givenName": "Rasul",
-      "familyName": "Kireev",
+      "name": "{{ cookiecutter.author_name }}",
       "url": "https://rasulkireev.com/"
     }
   }
