--- a/{{ cookiecutter.project_slug }}/frontend/templates/base_app.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/base_app.html
@@ -213,8 +213,7 @@
       "url": "https://{{ '{{ request.get_host }}' }}/",
       "author": {
         "@type": "Person",
-        "givenName": "Rasul",
-        "familyName": "Kireev",
+        "name": "{{ cookiecutter.author_name }}",
         "url": "https://rasulkireev.com/"
       }
     }
