--- a/{{ cookiecutter.project_slug }}/frontend/templates/blog/blog_posts.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/blog/blog_posts.html
@@ -61,8 +61,7 @@
     "url": "https://{% raw %}{{ request.get_host }}{% endraw %}{% raw %}{% url 'blog_posts' %}{% endraw %}",
     "author": {
       "@type": "Person",
-      "givenName": "Rasul",
-      "familyName": "Kireev",
+      "name": "{{ cookiecutter.author_name }}",
       "url": "https://rasulkireev.com/"
     }
   }
